<package format="2">
  <name>rapp_hazard</name>
  <version>0.2.0</version>
  <description>RAPP hazard detection application</description>
  <maintainer email="maciek.slon@gmail.com">Maciej Stefańczyk</maintainer>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>rapp-robots-api</build_depend>
</package>
